# zotero-qa-notes

./: .gitignore  tea.yaml
.github/workflows/: ci.yml
examples/: sample_zotero.json
src/zotero_qa_notes/: pyproject.toml
