[project]
name = "zotero-qa-notes"
version = "0.1.2"
description = "Convert Zotero JSON export into Markdown with optional Q&A prompts"
authors = [{ name = "innoxmind", email = "innoxmind@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["zotero", "markdown", "notes", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "markdownify>=0.14.1",
  "python-slugify>=8.0.4"
]

[project.scripts]
zotero-qa-notes = "zotero_qa_notes.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
